# trustee

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  Makefile  README.md  cabal.haskell-ci  cabal.make-travis-yml  cabal.project  trustee.cabal  trustee.config
.github/workflows/: haskell-ci.yml
peura/: .travis.yml  LICENSE  cabal.haskell-ci  cabal.project  peura.cabal
peura/cbits/: windows.c
peura/src/: Peura.hs
peura/src/Peura/: Exports.hs  Monad.hs  Orphans.hs
src/: Trustee.hs  VendingMachine.hs
src-exe/: Main.hs
src/Data/Functor/: Representable.hs
src/Trustee/: Bounds.hs  CabalBuild.hs  Config.hs  Depends.hs  GHC.hs  Get.hs  Index.hs  Lock.hs  LowerBounds.hs  Matrix.hs  Matrix2.hs  Monad.hs  NewBuild.hs  Options.hs  Paths.hs  Sweep.hs  Table.hs  Txt.hs  Util.hs
src/Urakka/: Estimation.hs
