cabal-version: 2.2
name:          trustee
version:       0
synopsis:      A Hackage Trustees tool
category:      Development
description:
  Hackage Trustees tool can
  * Build package with lower-bounds

homepage:      https://github.com/phadej/trustee
license:       GPL-3.0-only
license-file:  LICENSE
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:     (c) 2018 Oleg Grenrus
build-type:    Simple
tested-with:   GHC ==8.4.4

library
  exposed-modules:
    Trustee
    Trustee.Bounds
    Trustee.Config
    Trustee.GHC
    Trustee.Get
    Trustee.Index
    Trustee.Lock
    Trustee.Matrix
    Trustee.Matrix2
    Trustee.Monad
    Trustee.NewBuild
    Trustee.Options
    Trustee.Table
    Trustee.Txt
    Trustee.Util

  exposed-modules:  Urakka.Estimation
  build-depends:
    , aeson                 ^>=1.4.0.0
    , aeson-compat          ^>=0.3.7.1
    , ansi-terminal         ^>=0.10.1
    , async                 ^>=2.2.1
    , base                  ^>=4.11
    , base16-bytestring     ^>=0.1.1.6
    , binary                ^>=0.8.5.1
    , bytestring            ^>=0.10.8.2
    , Cabal                 ^>=3.0.0.0
    , cabal-plan            ^>=0.6.1.0
    , clock                 ^>=0.8
    , concurrent-output     ^>=1.10.3
    , containers            ^>=0.5.10.2 || ^>=0.6.0.1
    , cryptohash-sha512     ^>=0.11.100.1
    , deepseq               ^>=1.4.3.0
    , directory             ^>=1.3.0.2
    , exceptions            ^>=0.10
    , filepath              ^>=1.4.1.2
    , Glob                  ^>=0.10
    , lattices              ^>=2
    , lukko                 ^>=0.1
    , optparse-applicative  ^>=0.15.1.0
    , paths                 ^>=0.2.0.0
    , process               ^>=1.6.1.0
    , regression-simple
    , selective             ^>=0.3
    , stm                   ^>=2.4.4.1 || ^>=2.5.0.0
    , tar                   ^>=0.5.0.3
    , tdigest               ^>=0.2
    , text                  ^>=1.2.3.0
    , time                  ^>=1.8.0.2
    , transformers          ^>=0.5.2.0
    , unix                  ^>=2.7.2.2
    , unliftio-core         ^>=0.1.2.0
    , urakka
    , vec                   ^>=0.2

  hs-source-dirs:   src
  ghc-options:      -Wall
  default-language: Haskell2010

executable trustee
  main-is:          Main.hs
  build-depends:
    , base
    , trustee

  hs-source-dirs:   src-exe
  ghc-options:      -Wall -threaded -rtsopts
  default-language: Haskell2010
