cabal-version: 2.2
name:          trustee
version:       0
synopsis:      A Hackage Trustees tool
category:      Development
description:
  Hackage Trustees tool can
  * Build package with lower-bounds

homepage:      https://github.com/phadej/trustee
license:       GPL-3.0-only
license-file:  LICENSE
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:     (c) 2018-2019 Oleg Grenrus
build-type:    Simple
tested-with:   GHC ==9.2.5

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:
    Trustee
    Trustee.Bounds
    Trustee.CabalBuild
    Trustee.Config
    Trustee.Depends
    Trustee.Get
    Trustee.GHC
    Trustee.Index
    Trustee.Lock
    Trustee.Matrix
    Trustee.Monad
    Trustee.Options
    Trustee.Sweep
    Trustee.Table
    Trustee.Txt
    Trustee.Util

  -- independent extras
  exposed-modules:
    Urakka.Estimation
    VendingMachine

  build-depends:
    , peura
    , regression-simple
    , urakka

  build-depends:
    , base          ^>=4.16.4.0
    , bytestring    ^>=0.11.3.1
    , Cabal         ^>=3.8.1.0
    , containers    ^>=0.6.5.1
    , deepseq       ^>=1.4.6.1
    , directory     ^>=1.3.6.2
    , exceptions    ^>=0.10.4
    , filepath      ^>=1.4.2.2
    , mtl           ^>=2.2.2
    , process       ^>=1.6.16.0
    , stm           ^>=2.5.0.2
    , text          ^>=1.2.5.0
    , time          ^>=1.11.1.1
    , transformers  ^>=0.5.6.2
    , unix          ^>=2.7.2.2

  build-depends:
    , aeson                  ^>=2.1.0.0
    , ansi-terminal          ^>=0.11
    , async                  ^>=2.2.1
    , base16-bytestring      ^>=1.0.0.0
    , binary                 ^>=0.8.5.1
    , cabal-install-parsers  ^>=0.5
    , cabal-plan             ^>=0.7.1.0
    , clock                  ^>=0.8
    , concurrent-output      ^>=1.10.3
    , cryptohash-sha512      ^>=0.11.100.1
    , free                   ^>=5.1.2
    , Glob                   ^>=0.10
    , lattices               ^>=2
    , lukko                  ^>=0.1
    , optparse-applicative   ^>=0.17.0.0
    , paths                  ^>=0.2.0.0
    , selective              ^>=0.5
    , semigroupoids          ^>=5.3.3
    , tar                    ^>=0.5.0.3
    , tdigest                ^>=0.2
    , unliftio-core          ^>=0.2.0.1

  -- TODO: Cabal-3.4
  build-depends:      pretty
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    GADTs
    GeneralizedNewtypeDeriving
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies

executable trustee
  main-is:          Main.hs
  build-depends:
    , base
    , trustee

  hs-source-dirs:   src-exe
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N4
  default-language: Haskell2010
