cabal-version: 2.2
name:          peura
version:       0.1
synopsis:      Oleg's "prelude"
category:      Development
description:   A very opinionated library 
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
license:       GPL-2.0-or-later AND BSD-3-Clause
license-files: LICENSE LICENSE.GPLv2 LICENSE.GPLv3
build-type:    Simple
tested-with:   GHC ==8.6.5

source-repository head
  type:     git
  location: https://github.com/phadej/peura/

library
  default-language:   Haskell2010
  hs-source-dirs:     src

  -- Main module
  exposed-modules:    Peura

  -- These modules are re-exported
  -- cabal-fmt: expand src -Peura
  exposed-modules:
    Peura.ByteString
    Peura.Debug
    Peura.Exports
    Peura.Monad
    Peura.Orphans
    Peura.Paths
    Peura.Process
    Peura.Serialise

  -- GHC-boot dependencies
  build-depends:
    , base        ^>=4.12.0.0
    , bytestring  ^>=0.10.8.2
    , containers  ^>=0.6.0.1
    , deepseq     ^>=1.4.4.0
    , directory   ^>=1.3.3.0
    , filepath    ^>=1.4.2.1
    , mtl         ^>=2.2.2
    , parsec      ^>=3.1.13.0
    , pretty      ^>=1.1.3.6
    , process     ^>=1.6.5.0
    , text        ^>=1.2.3.0

  -- We use Cabal-3.0
  build-depends:      Cabal ^>=3.0

  -- Extra dependencies
  build-depends:
    , ansi-terminal   ^>=0.10.1
    , clock           ^>=0.8
    , exceptions      ^>=0.10.3
    , generic-lens    ^>=1.2.0.0
    , lens            ^>=4.18.1
    , paths           ^>=0.2.0.0
    , process-extras  ^>=0.7.4
    , serialise       ^>=0.2.1.0
    , unliftio-core   ^>=0.1.2.0

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    GADTs
    GeneralizedNewtypeDeriving
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
